--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,30 @@ form {
   align-items: center;
   width: 100%;
 }
+
+.clima h2 {
+  text-align: center;
+}
+
+.clima > p:first-of-type {
+  font-size: 4rem;
+  font-weight: 900;
+  font-family: 'Inter', sans-serif;
+}
+
+.clima p {
+  text-align: center;
+  margin: 0;
+}
+
+.clima p span {
+  font-size: 1rem;
+  vertical-align: super;
+}
+
+.temp_min_max {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+}
